# herding-cats

./: .gitignore  .poetryignore  404.html  CNAME  README.md  index.html  makefile  notes.md  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: herding_cats_explorer_tests.yml  herding_cats_linting.yml  lambda_zipper.yml
HerdingCats/: __init__.py  api_endpoints.py  herding_cats.py  test.py
HerdingCats/config/: codelists.py  source_endpoints.py  sources.py
HerdingCats/data_loader/: data_loader.py  data_loader_stores.py
HerdingCats/endpoints/: api_endpoints.py
HerdingCats/errors/: cats_errors.py
HerdingCats/explorer/: __init__.py  cat_explore.py  explore.py
HerdingCats/llm/: llm_summary.py
HerdingCats/llm_summary/: llm_agent.py  llm_config.py  llm_summary.py
HerdingCats/loader/: loader.py  loader_stores.py
HerdingCats/session/: cat_session.py  session.py
assets/css/: styles.032cb1b7.css  styles.52ee604f.css
assets/js/: 0058b4c6.65081ebe.js  0058b4c6.88cdebc0.js  0058b4c6.8f14a48b.js  0e384e19.22a25c45.js  0e384e19.36fc80e4.js  0e384e19.68c6f32e.js  0e384e19.7cdec5d1.js  0e384e19.b394bb6a.js  0e384e19.c00e3595.js  0e384e19.e96aa8e5.js  0e384e19.f9492d6f.js  18c41134.031cefb1.js  18c41134.cd9f8384.js  1df93b7f.086a3cd9.js  1df93b7f.185f6b3e.js  1df93b7f.8261eae9.js  1df93b7f.8e36dc68.js  1df93b7f.a29204a5.js  1df93b7f.cf63e1f5.js  1df93b7f.e769db68.js  1e4232ab.ab8420c3.js  1e4232ab.c774a0ae.js  352e7037.a7efd932.js  352e7037.e43de871.js  393be207.5c4f8ab4.js  393be207.61a06199.js  (+134 more)
blog/: atom.xml  index.html  rss.xml
docs/: README.md  docusaurus.config.ts  sidebars.ts
documentation/: overview.md
herding_cats_explorer/: README.md  explore_cat_structure.py  explore_cata_structure.py  exploring_cats.py  herding_cats.py
herding_cats_pipeline/: README.md
herding_cats_pipelines/: README.md
markdown-page/: index.html
src/: api_endpoints.py  cats_errors.py  herding_cats.py
tests/: endpoints_still_active.py  test_endpoint_health.py  test_endpoints_still_active.py  test_package_list.py  test_session_creation.py
(+68 files in other folders)
