[tool.poetry]
name = "herding-cats"
version = "0.1.0"
description = ""
authors = ["christophercarlon <cmcarleone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.1"
loguru = "^0.7.2"
requests = "^2.32.3"
pandas = "^2.2.2"
watchdog = "^4.0.1"
openpyxl = "^3.1.5"
ruff = "^0.5.1"
tabulate = "^0.9.0"
boto3 = "^1.34.140"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
