[tool.poetry]
name = "HerdingCats"
version = "0.1.1"
description = ""
authors = ["christophercarlon <cmcarleone@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
requests = "^2.32.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
polars = "^1.5.0"
fastexcel = "^0.11.6"
duckdb = "1.0.0"
boto3 = "^1.35.23"
pyarrow = "^17.0.0"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.1"
ruff = "^0.5.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
