[tool.poetry]
name = "HerdCats"
version = "0.1.5"
description = "A tool for exploring open data sources."
authors = ["christophercarlon"]
readme = "README.md"
packages = [{ include = "HerdingCats" }]
license = "MIT"
homepage = "https://github.com/CHRISCARLON/Herding-CATs"
repository = "https://github.com/CHRISCARLON/Herding-CATs"
keywords = [
    "open data",
    "data catalogues",
    "datastores",
    "ckan",
    "open datasoft",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
loguru = "0.7.3"
requests = "^2.32.5"
pandas = "2.2.2"
openpyxl = "3.1.5"
polars = "1.35.1"
fastexcel = "^0.16.0"
duckdb = "1.4.1"
boto3 = "1.40.64"
pyarrow = "22.0.0"
xlrd = "2.0.1"
tqdm = "4.67.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.2.1"
pytest = "8.4.2"
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
